--- a/KinectarGame/KinectarGame_log.html
+++ b/KinectarGame/KinectarGame_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>KinectarGame Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2017/7/24 11:49:51</p>
+<p class="info">2017/7/24 12:11:14</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -37,14 +37,14 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">BinaryReader &quot;/101&quot; をロードしました。サイズ: 50.3KiB</p>
 <p class="debug">GDI+ を初期化しました。</p>
 <p class="debug">Media Foundation を初期化しました。</p>
+<p class="debug">BinaryReader &quot;/101&quot; をクローズしました。</p>
 <p class="info">MP3 デコーダーは libmpg123 を使用します。</p>
 <p class="debug">MP3 デコーダーを初期化しました。</p>
 <p class="info">ウィンドウクラスを登録しました。</p>
-<p class="debug">BinaryReader &quot;/101&quot; をクローズしました。</p>
 <p class="info">Wintab32.dll が無いので、ペンタブは利用できません。</p>
 <p class="info">ゲームパッドを使用できます。最大接続数: 16</p>
-<p class="info">Gamepad [0] (Microsoft PC-joystick driver) が接続されました。 ボタン数: 8</p>
 <p class="debug">スプラッシュウィンドウを作成しました。</p>
+<p class="info">Gamepad [0] (Microsoft PC-joystick driver) が接続されました。 ボタン数: 8</p>
 <p class="debug">xinput1_4.dll をロードしました。</p>
 <p class="info">XInput コントローラーを使用できます。</p>
 <p class="info">マルチタッチには対応していません。</p>
@@ -338,7 +338,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
 <p class="debug">スプラッシュウィンドウを終了しました。</p>
-<p class="info">System::Update() : ExitEvent CloseButton</p>
+<p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
@@ -430,7 +430,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2017/7/24 11:49:57</p>
+<p class="info">2017/7/24 12:11:21</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
