--- a/KinectarGame/KinectarGame_log.html
+++ b/KinectarGame/KinectarGame_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>KinectarGame Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2017/7/24 12:11:14</p>
+<p class="info">2017/7/24 12:31:44</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -43,7 +43,6 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">ウィンドウクラスを登録しました。</p>
 <p class="info">Wintab32.dll が無いので、ペンタブは利用できません。</p>
 <p class="info">ゲームパッドを使用できます。最大接続数: 16</p>
-<p class="debug">スプラッシュウィンドウを作成しました。</p>
 <p class="info">Gamepad [0] (Microsoft PC-joystick driver) が接続されました。 ボタン数: 8</p>
 <p class="debug">xinput1_4.dll をロードしました。</p>
 <p class="info">XInput コントローラーを使用できます。</p>
@@ -52,6 +51,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">Kinect v1 を使用できます。</p>
 <p class="info">Kinect v2 を使用できます。</p>
 <p class="info">xaudio2_8.dll をロードしました。</p>
+<p class="debug">スプラッシュウィンドウを作成しました。</p>
 <p class="debug">Sound[0(null)] を作成しました。</p>
 <p class="debug">XAudio2(2.8) を初期化しました。</p>
 <p class="info">d3d11.dll をロードしました。</p>
@@ -338,11 +338,16 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">メインスレッドを開始しました。</p>
 <hr width="76%">
 <p class="debug">スプラッシュウィンドウを終了しました。</p>
+<p class="debug">Font[2] を作成しました。</p>
+<p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
+<p class="debug">Texture[13] を作成しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
+<p class="debug">Texture[13] を破棄しました。</p>
+<p class="debug">Font[2] を破棄しました。</p>
 <p class="debug">Effect[0(null)] を破棄しました。</p>
 <p class="debug">エフェクトマネージャーを終了しました。</p>
 <p class="debug">InputLayout[5] を破棄しました。</p>
@@ -430,7 +435,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2017/7/24 12:11:21</p>
+<p class="info">2017/7/24 12:31:48</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
