--- a/KinectarGame/KinectarGame_log.html
+++ b/KinectarGame/KinectarGame_log.html
@@ -22,7 +22,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <body>
 <h2>KinectarGame Log</h2>
 <p class="info">アプリケーションを開始します。</p>
-<p class="info">2017/7/26 11:15:47</p>
+<p class="info">2017/7/26 11:22:02</p>
 <p class="info">エンジンを初期化します。</p>
 <p class="info">Siv3D Engine (Debug build) version August 2016 v2 (x86)</p>
 <p class="debug">FileMonitor[0(null)] を作成しました。</p>
@@ -35,8 +35,8 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="info">SSE3/SSE4.1/SSE4.2 をサポート</p>
 <p class="info">AVX2 をサポート</p>
 <p class="debug">BinaryReader &quot;/101&quot; をロードしました。サイズ: 73.8KiB</p>
-<p class="debug">GDI+ を初期化しました。</p>
 <p class="debug">BinaryReader &quot;/101&quot; をクローズしました。</p>
+<p class="debug">GDI+ を初期化しました。</p>
 <p class="debug">Media Foundation を初期化しました。</p>
 <p class="info">MP3 デコーダーは libmpg123 を使用します。</p>
 <p class="debug">MP3 デコーダーを初期化しました。</p>
@@ -341,17 +341,22 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">解像度を 1366x768 に変更しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x256 Format: 41)</p>
 <p class="debug">Texture[13] を作成しました。</p>
+<p class="info">Kinect v2 センサーを使用できます。</p>
+<p class="debug">MIDI 出力デバイス &apos;Microsoft GS Wavetable Synth&apos; を初期化しました。</p>
+<p class="debug">BinaryReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.wav&quot; をオープンしました。サイズ: 38.5MiB</p>
+<p class="debug">BinaryReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.wav&quot; をクローズしました。</p>
+<p class="debug">Sound[1] を作成しました。</p>
+<p class="debug">BinaryReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.data&quot; をオープンしました。サイズ: 358B</p>
+<p class="debug">TextReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.data&quot; をオープンしました。サイズ: 358B, エンコーディング: UTF-8, BOM: なし</p>
+<p class="debug">BinaryReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.data&quot; をクローズしました。</p>
+<p class="debug">TextReader &quot;C:/Users/mjtak/Documents/Visual Studio 2015/Projects/KinectarGame/KinectarGame/春中水泳.data&quot; をクローズしました。</p>
 <p class="debug">Font[2] を作成しました。</p>
 <p class="debug">(dynamic texture) (サイズ 1024x160 Format: 41)</p>
 <p class="debug">Texture[14] を作成しました。</p>
-<p class="info">Kinect v2 センサーを使用できます。</p>
-<p class="debug">MIDI 出力デバイス &apos;Microsoft GS Wavetable Synth&apos; を初期化しました。</p>
-<p class="fail">TCPClient: connect failed: 接続済みの呼び出し先が一定の時間を過ぎても正しく応答しなかったため、接続できませんでした。または接続済みのホストが応答しなかったため、確立された接続は失敗しました。</p>
 <p class="info">System::Update() : ExitEvent EscapeKey</p>
 <hr width="76%">
 <p class="info">メインスレッドを終了しました。</p>
 <p class="info">ウィンドウメッセージの終了を待機中です。</p>
-<p class="info">.</p>
 <p class="info">ウィンドウ表示を終了しました。</p>
 <p class="debug">Texture[14] を破棄しました。</p>
 <p class="debug">Font[2] を破棄しました。</p>
@@ -434,6 +439,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">Texture[10] を破棄しました。</p>
 <p class="debug">Texture マネージャーを終了しました。</p>
 <p class="debug">Sound[0(null)] を破棄しました。</p>
+<p class="debug">Sound[1] を破棄しました。</p>
 <p class="debug">XAudio2 を終了しました。</p>
 <p class="debug">入力デバイスを終了しました。</p>
 <p class="info">ウィンドウクラスの登録を解除しました。</p>
@@ -444,7 +450,7 @@ p.c2	{ color: #AA9988; text-align: center; font-size: 9px; }
 <p class="debug">FileMonitor[0(null)] を破棄しました。</p>
 <p class="debug">FileMonitor マネージャーを終了しました。</p>
 <p class="info">エンジンを終了しました。</p>
-<p class="info">2017/7/26 11:16:29</p>
+<p class="info">2017/7/26 11:22:24</p>
 
 <br>
 <p class="c0">Siv3D Engine August 2016 v2 (x86)</p>
